hphp/test/zend/good/ext/standard/tests/math/sqrt_basic.php
<?php
ini_set('precision ',  14);

/* 
 * proto float sqrt(float number)
 * Function is implemented in ext/standard/math.c
*/ 

$arg_0 = 9.0;

var_dump(sqrt($arg_0));

?>